--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@nexus/schema": "^0.14.0",
     "graphql": "^15.3.0",
-    "graphql-yoga": "1.18.3"
+    "graphql-yoga": "1.18.3",
+    "nexus-plugin-prisma": "^0.16.1",
+    "nexus-prisma": "0.13.0"
   },
   "devDependencies": {
+    "@prisma/cli": "^2.2.2",
     "@types/node": "14.0.22",
     "ts-node": "^8.10.2",
     "ts-node-dev": "1.0.0-pre.51",
