--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
   "name": "1st-graphql-prisma2",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "dependencies": {
     "@nexus/schema": "^0.14.0",
-    "graphql": "^15.3.0",
+    "@prisma/client": "2.2.2",
+    "core-util-is": "^1.0.2",
+    "graphql": "15.3.0",
+    "graphql-upload": "11.0.0",
     "graphql-yoga": "1.18.3",
-    "nexus-plugin-prisma": "^0.16.1",
     "nexus-prisma": "0.13.0"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.2.2",
-    "@types/node": "14.0.22",
-    "ts-node": "^8.10.2",
-    "ts-node-dev": "1.0.0-pre.51",
+    "@prisma/cli": "2.2.2",
+    "@types/node": "12.12.50",
+    "@types/ws": "7.2.6",
+    "ts-node": "8.10.2",
+    "ts-node-dev": "1.0.0-pre.50",
     "typescript": "3.9.6"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "all"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
