--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,9 @@
 {
     "compilerOptions": {
-        "module": "system",
-        "noImplicitAny": true,
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "outFile": "../../built/local/tsc.js",
-        "sourceMap": true
+      "outDir": "dist",
+      "rootDir": "src",
+      "lib": ["esnext"],
+      "strict": true
     },
-    "include": [
-        "src/**/*"
-    ],
-    "exclude": [
-        "node_modules",
-        "**/*.spec.ts"
-    ]
-}
+    "include": ["src/**/*"]
+  }
